# OOP_LAB7

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
include/: bull.h  dragon.h  frog.h  npc.h  visitor.h
src/: bull.cpp  dragon.cpp  frog.cpp  main.cpp  npc.cpp
test/: tests.cpp
